gitops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bubu-aqua
  namespace: cicd-bubu-aqua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bubu-aqua
  template:
    metadata:
      labels:
        app: bubu-aqua
    spec:
      containers:
        - name: bubu-aqua
          image: localhost:5000/bubu-aqua:67e0ab05b40d19abf5aff6d48fd32398602c49fb
          ports:
            - containerPort: 80
