gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bubu-aqua
  namespace: bubu-aqua-dev
spec:
  selector:
    app: bubu-aqua
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
