gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bubu-aqua
  namespace: bubu-aqua-dev
spec:
  ingressClassName: nginx
  rules:
    - host: bubu-aqua.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bubu-aqua
                port:
                  number: 80
